--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,7 @@
     <string name="email_notes">Click on Email address to send email</string>
     <string name="delete">Delete all data</string>
     <string name="Update">Update Rentee Details</string>
+    <string name="contact">contact us</string>
+    <string name="other">others</string>
+    <string name="logout">logout</string>
 </resources>
